--- a/assets/main.css
+++ b/assets/main.css
@@ -107,7 +107,7 @@ a {
   text-decoration: none;
 }
 a:visited {
-  color: #1756a9;
+  color: rgb(22.9483471074, 86.2541322314, 168.5516528926);
 }
 a:hover {
   color: #111;
@@ -374,7 +374,7 @@ a {
  * Site header
  */
 .site-header {
-  border-top: 5px solid #424242;
+  border-top: 5px solid rgb(66.25, 66.25, 66.25);
   border-bottom: 1px solid #e8e8e8;
   min-height: 55.95px;
   position: relative;
@@ -389,7 +389,7 @@ a {
   float: left;
 }
 .site-title, .site-title:visited {
-  color: #424242;
+  color: rgb(66.25, 66.25, 66.25);
 }
 
 .site-nav {
@@ -437,7 +437,7 @@ a {
     text-align: center;
   }
   .site-nav .menu-icon > svg path {
-    fill: #424242;
+    fill: rgb(66.25, 66.25, 66.25);
   }
   .site-nav input ~ .trigger {
     clear: both;
